--- a/tests.toml
+++ b/tests.toml
@@ -1,10 +1,10 @@
 [canonical-tests]
 
-# Test case: no name given
+# no name given
 "19709124-b82e-4e86-a722-9e5c5ebf3952" = true
 
-# Test case: a name given
+# a name given
 "3451eebd-123f-4256-b667-7b109affce32" = true
 
-# Test case: another name given
+# another name given
 "653611c6-be9f-4935-ab42-978e25fe9a10" = false
