--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,5 +54,4 @@ jobs:
       #   run: ./.github/bin/install-build-tools
 
       - name: Build binary
-        # run: ./.github/bin/build
-        run: nimble build -y
+        run: ./.github/bin/build
