--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,28 +16,28 @@ jobs:
         target:
           - os: linux
             triple: x86_64-linux-musl
-          - os: linux
-            triple: i686-linux-musl
-          - os: linux
-            triple: aarch64-linux-musl
-          - os: linux
-            triple: armv7l-linux-musleabihf
-          - os: macosx
-            triple: x86_64-apple-darwin14
-          - os: windows
-            triple: x86_64-w64-mingw32
-          - os: windows
-            triple: i686-w64-mingw32
+          # - os: linux
+          #   triple: i686-linux-musl
+          # - os: linux
+          #   triple: aarch64-linux-musl
+          # - os: linux
+          #   triple: armv7l-linux-musleabihf
+          # - os: macosx
+          #   triple: x86_64-apple-darwin14
+          # - os: windows
+          #   triple: x86_64-w64-mingw32
+          # - os: windows
+          #   triple: i686-w64-mingw32
         include:
           - target:
               os: linux
             builder: ubuntu-18.04
-          - target:
-              os: macosx
-            builder: macos-10.15
-          - target:
-              os: windows
-            builder: windows-2019
+          # - target:
+          #     os: macosx
+          #   builder: macos-10.15
+          # - target:
+          #     os: windows
+          #   builder: windows-2019
 
     name: "Build ${{ matrix.target.triple }}"
     runs-on: ${{ matrix.builder }}
@@ -55,3 +55,6 @@ jobs:
 
       - name: Build binary
         run: ./.github/bin/build
+        env:
+          os: ${{ matrix.target.os }}
+          triple: ${{ matrix.target.triple }}
