--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,12 +32,12 @@ jobs:
           - target:
               os: linux
             builder: ubuntu-18.04
-          # - target:
-          #     os: macosx
-          #   builder: macos-10.15
-          # - target:
-          #     os: windows
-          #   builder: windows-2019
+          - target:
+              os: macosx
+            builder: macos-10.15
+          - target:
+              os: windows
+            builder: windows-2019
 
     name: "Build ${{ matrix.target.triple }}"
     runs-on: ${{ matrix.builder }}
