--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,3 +56,15 @@ jobs:
         env:
           os: ${{ matrix.target.os }}
           triple: ${{ matrix.target.triple }}
+
+      - name: Export current version
+        run: ./.github/bin/export-version
+
+      - name: Publish release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: canonicaldatasyncer-*
+          file_glob: true
+          tag: ${{ env.VERSION }}
+          overwrite: false
