--- a/.github/bin/build
+++ b/.github/bin/build
@@ -1,18 +1,19 @@
 #!/usr/bin/env sh
 
 nimble install -d -Y
+mkdir -p artifacts
 
 case "$OS" in
   windows)
     nimble build -d:release --passC:'-flto' --passL='-s' --passL='-static'
-    7z a canonicaldatasyncer-windows-64bit.zip canonicaldatasyncer.exe
+    7z a artifacts/canonicaldatasyncer-windows-64bit.zip canonicaldatasyncer.exe
     ;;
   linux)
     nimble build -d:release --passC:'-flto' --passL='-s' --passL='-static'
-    tar -cvzf canonicaldatasyncer-linux-64bit.tgz canonicaldatasyncer
+    tar -cvzf artifacts/canonicaldatasyncer-linux-64bit.tgz canonicaldatasyncer
     ;;
   macosx)
     nimble build -d:release
-    tar -cvzf canonicaldatasyncer-mac-64bit.tgz canonicaldatasyncer
+    tar -cvzf artifacts/canonicaldatasyncer-mac-64bit.tgz canonicaldatasyncer
     ;;
 esac
