--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
               os: windows
             builder: windows-2019
 
-    name: "Build ${{ matrix.target.os }}-${{ matrix.target.arch }}"
+    name: "${{ matrix.target.os }}-${{ matrix.target.arch }}"
     runs-on: ${{ matrix.builder }}
     steps:
       - name: Checkout code
