--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,8 @@ jobs:
             arch: 64-bit
           # - os: macosx
           #   arch: 64-bit
-          - os: windows
-            arch: 64-bit
+          # - os: windows
+          #   arch: 64-bit
         include:
           - target:
               os: linux
@@ -27,9 +27,9 @@ jobs:
           # - target:
           #     os: macosx
           #   builder: macos-10.15
-          - target:
-              os: windows
-            builder: windows-2019
+          # - target:
+          #     os: windows
+          #   builder: windows-2019
 
     name: "${{ matrix.target.os }}-${{ matrix.target.arch }}"
     runs-on: ${{ matrix.builder }}
@@ -69,6 +69,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Install Nim
+        uses: jiro4989/setup-nim-action@v1
+        with:
+          nim-version: "1.2.6"
 
       - name: Export current version
         run: ./.github/bin/export-version
