--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Publish release
         uses: svenstaro/upload-release-action@v2
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          file: "${{ env.ARTIFACT_FILE }}"
-          tag: "${{ env.VERSION }}"
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ${{ env.ARTIFACT_FILE }}
+          tag: ${{ env.VERSION }}
           overwrite: true
