--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,10 +37,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # - name: Install Nim
-      #   uses: jiro4989/setup-nim-action@v1
-      #   with:
-      #     nim-version: "1.2.6"
+      - name: Install Nim
+        uses: jiro4989/setup-nim-action@v1
+        with:
+          nim-version: "1.2.6"
 
       # - name: Build binary
       #   shell: bash
