--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,16 +2,34 @@ name: Build
 
 on:
   push:
-    branches: [master]
-    paths: ["**.nim"]
-  pull_request:
-    branches: [master]
-    paths: ["**.nim"]
+    tags:
+      - "*"
 
 jobs:
   build:
-    name: Build
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        target:
+          - os: linux
+            arch: 64-bit
+          - os: macosx
+            arch: 64-bit
+          - os: windows
+            arch: 64-bit
+        include:
+          - target:
+              os: linux
+            builder: ubuntu-18.04
+          - target:
+              os: macosx
+            builder: macos-10.15
+          - target:
+              os: windows
+            builder: windows-2019
+
+    name: "${{ matrix.target.os }}-${{ matrix.target.arch }}"
+    runs-on: ${{ matrix.builder }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -21,8 +39,23 @@ jobs:
         with:
           nim-version: "1.2.6"
 
-      - name: Install Nim build tools
-        run: ./.github/bin/install-build-tools
-
       - name: Build binary
+        shell: bash
         run: ./.github/bin/build
+        env:
+          OS: ${{ matrix.target.os }}
+          ARCH: ${{ matrix.target.arch }}
+
+      - name: Create artifact
+        shell: bash
+        run: ./.github/bin/create-artifact
+        env:
+          OS: ${{ matrix.target.os }}
+          ARCH: ${{ matrix.target.arch }}
+
+      - name: Publish release
+        shell: bash
+        run: ./.github/bin/publish-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAG: ${{ github.ref }}
