Use underscore in application name

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .vscode/
 
 # Application binary
-canonicaldatasyncer
+canonical_data_syncer
 
 # Temporary prob-specs repo
 .problem-specifications/
