--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
         target:
           - os: linux
             arch: 64bit
-          - os: macosx
+          - os: mac
             arch: 64bit
           - os: windows
             arch: 64bit
@@ -22,7 +22,7 @@ jobs:
               os: linux
             builder: ubuntu-18.04
           - target:
-              os: macosx
+              os: mac
             builder: macos-10.15
           - target:
               os: windows
