Build: Build with LTO on macOS

--- a/.github/bin/build
+++ b/.github/bin/build
@@ -10,6 +10,6 @@ case "$OS" in
     nimble build -d:release --passC:'-flto' --passL='-s' --passL='-static' --gcc.exe=musl-gcc --gcc.linkerexe=musl-gcc
     ;;
   mac)
-    nimble build -d:release
+    nimble build -d:release --passC:'-flto'
     ;;
 esac
