Build: Reduce binary size (#29)
* Build: Install musl on Linux
* Build: Build with musl on Linux
* Build: Build with LTO on macOS
* Build: Add `--opt:size`

The below tables show the size reduction due to the changes in the
`nimble build` switches since v0.6.0.

Size of the release archive:

|             |   Linux |   macOS | Windows |
|-------------+---------+---------+---------|
| v0.6.0      | 657 KiB | 137 KiB | 115 KiB |
| This commit | 109 KiB |  95 KiB |  90 KiB |
|-------------+---------+---------+---------|
| Ratio       |    0.17 |    0.69 |    0.78 |

Size of the binary:

|             |    Linux |   macOS | Windows |
|-------------+----------+---------+---------|
| v0.6.0      | 1458 KiB | 320 KiB | 245 KiB |
| This commit |  222 KiB | 221 KiB | 188 KiB |
|-------------+----------+---------+---------|
| Ratio       |     0.15 |    0.69 |    0.77 |

--- a/.github/bin/build
+++ b/.github/bin/build
@@ -4,12 +4,12 @@ nimble install -d -Y
 
 case "$OS" in
   windows)
-    nimble build -d:release --passC:'-flto' --passL='-s' --passL='-static'
+    nimble build -d:release --opt:size --passC:'-flto' --passL='-s' --passL='-static'
     ;;
   linux)
-    nimble build -d:release --passC:'-flto' --passL='-s' --passL='-static'
+    nimble build -d:release --opt:size --passC:'-flto' --passL='-s' --passL='-static' --gcc.exe=musl-gcc --gcc.linkerexe=musl-gcc
     ;;
   mac)
-    nimble build -d:release
+    nimble build -d:release --opt:size --passC:'-flto'
     ;;
 esac
