build: Tidy up scripts
This commit allows us to add `shellcheck` to CI in a later commit.

Changes:
- Double-quote variable expansions (resolves SC2086 shellcheck
  warnings).
- Use lowercase for script-scoped variables, leaving uppercase for
  environmental variables.
- Prefer "${my_variable}" to "$my_variable".
- Resolve SC2035 warning in `bin/format`.

--- a/.github/bin/build
+++ b/.github/bin/build
@@ -2,7 +2,7 @@
 
 nimble install -d -Y
 
-case "$OS" in
+case "${OS}" in
   windows)
     nimble build -d:release --opt:size --passC:'-flto' --passL='-s' --passL='-static'
     ;;
