--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,7 +41,7 @@ jobs:
         run: ./.github/bin/linux-install-build-tools
 
       - name: Install our Nimble dependencies
-        run: nimble -y install --depsOnly
+        run: nimble --accept install --depsOnly
 
       - name: Run `tests/all_tests.nim`
         run: nim c --styleCheck:error -r ./tests/all_tests.nim
