--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,10 +33,10 @@ jobs:
     runs-on: ${{ matrix.builder }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846 # 2.4.0
+        uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
 
       - name: Install Nim
-        uses: jiro4989/setup-nim-action@ebde5392eb73447228c5c53792cd209d798cdcf3 # 1.3.41
+        uses: jiro4989/setup-nim-action@ebde5392eb73447228c5c53792cd209d798cdcf3
         with:
           nim-version: "1.6.4"
 
