lint-whitespace: nitpick job name
Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>

--- a/.github/workflows/lint-whitespace.yml
+++ b/.github/workflows/lint-whitespace.yml
@@ -3,7 +3,7 @@ name: Lint whitespace
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
-  lintwhitespace:
+  lint_whitespace:
     name: Check for trailing whitespace and missing final newline
     runs-on: ubuntu-20.04
     steps:
