--- a/.github/workflows/lint-whitespace.yml
+++ b/.github/workflows/lint-whitespace.yml
@@ -10,5 +10,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
 
+      - name: Install rg
+        run: sudo apt-get install ripgrep
+
       - name: Check that every file has no trailing whitespace, and exactly one final newline
         run: ./.github/bin/lint-whitespace
