build: upload checksums file
For the 4.0.0-alpha.37 release, this file would contain:

    64e801c83569759a0f877791fe0138fecbb3386eeb7167fd25a5e8f9624dda49  configlet-linux-64bit.tgz
    6ad208cd881c048e42146dfc183cf4772b3ce4609460062b3ff4c67d856df81d  configlet-mac-64bit.tgz
    48c521bb514ea8af2bb91c1129e68c9e90dfa2218b732ddce5c34372a99013b1  configlet-windows-64bit.zip

A user can download the checksum file and a release archive, and then
verify the archive was downloaded correctly. For example, on Linux:

    $ sha256sum --check --ignore-missing configlet_4.0.0-alpha.37_checksums_sha256.txt
    configlet-linux-64bit.tgz: OK

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,3 +61,14 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REF: ${{ github.ref }}
+
+  checksums:
+    needs: [build]
+    runs-on: ubuntu-20.04
+    name: Upload checksums file
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
+
+      - name: Upload checksums file
+        run: ./.github/bin/upload-checksums-file
