build: fix missing environmental variables
I didn't need this in my initial implementation, because I was uploading
in `publish-release` conditionally (without a dependent job).

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,3 +72,6 @@ jobs:
 
       - name: Upload checksums file
         run: ./.github/bin/upload-checksums-file
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REF: ${{ github.ref }}
