--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,6 +44,8 @@ jobs:
         uses: iffy/install-nim@09ef2b9c32a667d88097c8db32158a90a56165d1
         with:
           version: "binary:1.6.4"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install musl on Linux
         if: matrix.target.os == 'linux'
