--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
 
-      - name: On Linux, switch to GCC 10 and install musl
+      - name: On Linux, install musl
         if: matrix.target.os == 'linux'
         run: ./.github/bin/linux-install-build-tools
 
