--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         include:
           - target:
               os: linux
-            builder: ubuntu-20.04
+            builder: ubuntu-22.04
           - target:
               os: mac
             builder: macos-11
@@ -35,7 +35,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
 
-      - name: On Linux, switch to GCC 10 and install musl
+      - name: On Linux, install musl
         if: matrix.target.os == 'linux'
         run: ./.github/bin/linux-install-build-tools
 
@@ -66,7 +66,7 @@ jobs:
 
   checksums:
     needs: [build]
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     name: Upload checksums file
     steps:
       - name: Checkout code
