--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
         include:
           - target:
               os: linux
-            builder: ubuntu-20.04
+            builder: ubuntu-22.04
           - target:
               os: mac
             builder: macos-11
@@ -40,7 +40,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
 
-      - name: On Linux, switch to GCC 10 and install musl
+      - name: On Linux, install musl
         if: matrix.target.os == 'linux'
         run: ./.github/bin/linux-install-build-tools
 
