--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,7 @@ jobs:
             runs-on: ubuntu-22.04
             arch: 64bit
 
-          - os: mac
+          - os: macos
             runs-on: macos-12
             arch: 64bit
 
