fetch-configlet, .github(workflows): rename `64bit` to `x86-64`
We need to distinguish between different 64bit architectures, like
`x86-64` and `arm64`.

Also rename `32bit` to `i386`.

Refs: 24
Refs: 363

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,15 +14,15 @@ jobs:
         include:
           - os: linux
             runs-on: ubuntu-22.04
-            arch: 64bit
+            arch: x86-64
 
           - os: macos
             runs-on: macos-12
-            arch: 64bit
+            arch: x86-64
 
           - os: windows
             runs-on: windows-2022
-            arch: 64bit
+            arch: x86-64
 
     name: "${{ matrix.os }}-${{ matrix.arch }}"
     runs-on: ${{ matrix.runs-on }}
