.github: rename environment variable
MINISIGN_SECRET_KEY sounded like the secret key for minisign itself. Try
to clarify that it's the key that we use to sign configlet releases,
using minisign.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,4 +75,4 @@ jobs:
         run: ./.github/bin/upload-signatures-and-checksums
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          MINISIGN_SECRET_KEY: ${{ secrets.MINISIGN_SECRET_KEY }}
+          CONFIGLET_MINISIGN_SECRET_KEY: ${{ secrets.CONFIGLET_MINISIGN_SECRET_KEY }}
